// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addTagType calls store creator and returns result 1`] = `
Object {
  "message": undefined,
  "success": true,
  "tagType": Object {
    "id": "103",
    "label": "meal_type",
  },
}
`;

exports[`deleteTagType calls store destroy and returns result - id exists 1`] = `
Object {
  "message": undefined,
  "success": true,
  "tagType": null,
}
`;

exports[`deleteTagType calls store destroy and returns result - id not found 1`] = `
Object {
  "message": "ID not found",
  "success": false,
  "tagType": null,
}
`;

exports[`updateTagType calls store update and returns result - id not found 1`] = `
Object {
  "message": "ID not found",
  "success": false,
  "tagType": null,
}
`;

exports[`updateTagType calls store update with values and returns result - id exists 1`] = `
Object {
  "message": undefined,
  "success": true,
  "tagType": Object {
    "id": "102",
    "label": "new label",
  },
}
`;
